tests/baselines/reference/es6ModuleLet.errors.txt
es6ModuleLet.ts(5,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
es6ModuleLet.ts(11,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== es6ModuleLet.ts (2 errors) ====
    export let a = "hello";
    export let x: string = a, y = x;
    let b = y;
    let c: string = b, d = c;
    export module m1 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export let k = a;
        export let l: string = b, m = k;
        let n = m1.k;
        let o: string = n, p = k;
    }
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export let k = a;
        export let l: string = b, m = k;
        let n = m1.k;
        let o: string = n, p = k;
    }